# lab_pro_poc

./: .env  .gitignore  README.md  debug_webhook_response.txt  ecosystem.config.js  install.sh  main.py  pyproject.toml  requirements.txt
data/: mock_db.json  sessions.db  sessions.json
docs/: CHANGELOG.md  DEPLOYMENT.md  GATEWAY_SETUP.md  POC_FEATURES_AND_ROADMAP.md  PRODUCTION_GUIDE.md  ROADMAP.md
scripts/: check_env.py  debug_webhook.py  get_lan_ip.py  install_ffmpeg.py  register_webhook.py  register_webhook_5001.py  register_webhook_ip.py  test_exclusion.py  verify_webhook_config.py
src/: config.py  dashboard.py  main.py
src/api/: webhook.py
src/core/: database.py  replier.py  session.py  transcriber.py  triage.py
src/scripts/: migration_v2.py
tests/: interactive_test.py  simulation_test.py  test_lan_connect.py  test_server_mock.py  test_simulation.py  test_triage.py  test_webhook_api.py  verify_session_v3.py
whatsapp-gateway/: db-auth.js  package-lock.json  package.json  server.js  session-manager.js
whatsapp-gateway/auth_info/: app-state-sync-key-AAAAAGnB.json  app-state-sync-key-AAAAAGnC.json  app-state-sync-key-AAAAAGnD.json  app-state-sync-version-critical_block.json  app-state-sync-version-critical_unblock_low.json  app-state-sync-version-regular.json  app-state-sync-version-regular_low.json  creds.json  lid-mapping-107082208571512_reverse.json  lid-mapping-118120878461113_reverse.json  lid-mapping-200171279356026_reverse.json  lid-mapping-221689250082866_reverse.json  lid-mapping-256315175768216_reverse.json  lid-mapping-558132991244.json  (+848 more)
