[project]
name = "lab-pro-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.40.0",
]
